--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       <load src="partials/footer.html" />
       <load src="partials/mobile-menu.html" />
     </main>
+    <load src="partials/modal-window.html" />
 
     <script type="module" src="./main.js" defer></script>
   </body>
